# CaveMan

./: .gitignore  README.md  pyproject.toml
.claude/: settings.local.json
.claude-plugin/: marketplace.json
.github/workflows/: ci.yml
plugin/: __init__.py
plugin/caveman_compress/: SKILL.md
plugin/caveman_compress/hooks/: post-save.sh  settings-example.json
plugin/caveman_compress/scripts/: __main__.py  audit.py  compress.py  detect.py  diff.py  stats.py  undo.py  utils.py  validate.py
plugins/caveman-compress/.claude-plugin/: plugin.json
plugins/caveman-compress/commands/: caveman-audit.md  caveman-compress.md  caveman-diff.md  caveman-stats.md  caveman-undo.md
plugins/caveman-compress/hooks/: hooks.json  post-save.py  post-save.sh
plugins/caveman-compress/scripts/: __init__.py  __main__.py  audit.py  compress.py  detect.py  diff.py  stats.py  undo.py  utils.py  validate.py
plugins/caveman-compress/skills/caveman-compress/: SKILL.md
plugins/caveman/.claude-plugin/: plugin.json
plugins/caveman/skills/caveman/: SKILL.md
tests/: conftest.py  test_audit.py  test_cli.py  test_compress.py  test_detect.py  test_undo_stats_diff.py  test_validate.py
