[project]
name = "caveman"
version = "1.0.2"
description = "Claude Code plugin that cuts token usage on both sides of the conversation"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "VxalCz" }]

[project.optional-dependencies]
dev = ["pytest>=7.0", "ruff>=0.4"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
